# linux_api_exercise

io/: CMakeLists.txt  main.c
linux_api/: CMakeLists.txt
linux_api/file_api/: copy.c  file_read_write.c  seek_io.c
linux_api/file_lock/: proc1.c  proc2.c
linux_api/file_permission/: file_perms.c  file_perms.h  file_perms_main.c
linux_api/lib/: alt_functions.c  alt_functions.h  ename.c.inc  error_functions.c  error_functions.h  get_num.h  syscall_speed.c  tlpi_hdr.h
linux_api/mmap/: mmaptest.c
linux_api/pipe/: fifo.c  fifo_client.c  fifo_seqnum_server.h  pipe.c
linux_api/posix/: pshm_create.c
linux_api/process/: fork.c  necho.c  necho_args.c
linux_api/signal/: catch_sigchld.c  catch_t_sigs.c  signal_functions.c  signal_functions.h  signal_receiver.c  signal_sender.c  t_sigquequ.c
linux_api/systemv_msg_queue/: svmsg_create.c  svmsg_recv.c  svmsg_send.c
linux_api/thread/: mutex_lock.c  producter_consumer_cond.c  producter_consumer_mutex.c  pthread_create.c
linux_api/time/: time_api.c
